--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "joi": "^17.12.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4",
+    "nodemailer": "^6.9.9",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
   }
